docs/envoy/v1.13.0/_sources/api-v3/extensions/clusters/aggregate/v3/cluster.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/clusters/aggregate/v3/cluster.proto:

Aggregate cluster configuration
===============================


.. _envoy_v3_api_msg_extensions.clusters.aggregate.v3.ClusterConfig:

extensions.clusters.aggregate.v3.ClusterConfig
----------------------------------------------

`[extensions.clusters.aggregate.v3.ClusterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/extensions/clusters/aggregate/v3/cluster.proto#L17>`_

Configuration for the aggregate cluster. See the :ref:`architecture overview
<arch_overview_aggregate_cluster>` for more information.

.. _extension_envoy.clusters.aggregate:


This extension may be referenced by the qualified name *envoy.clusters.aggregate*

.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. code-block:: json

  {
    "clusters": []
  }

.. _envoy_v3_api_field_extensions.clusters.aggregate.v3.ClusterConfig.clusters:

clusters
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Load balancing clusters in aggregate cluster. Clusters are prioritized based on the order they
  appear in this list.
  
  

