docs/envoy/v1.21.1/_sources/api-v3/extensions/clusters/aggregate/v3/cluster.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/clusters/aggregate/v3/cluster.proto:

Aggregate cluster configuration
===============================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/cluster/aggregate/v2alpha/cluster.proto <v1.17:envoy_api_file_envoy/config/cluster/aggregate/v2alpha/cluster.proto>`



.. _envoy_v3_api_msg_extensions.clusters.aggregate.v3.ClusterConfig:

extensions.clusters.aggregate.v3.ClusterConfig
----------------------------------------------

:repo:`[extensions.clusters.aggregate.v3.ClusterConfig proto] <api/envoy/extensions/clusters/aggregate/v3/cluster.proto#L19>`

Configuration for the aggregate cluster. See the :ref:`architecture overview
<arch_overview_aggregate_cluster>` for more information.


.. _extension_envoy.clusters.aggregate:

This extension may be referenced by the qualified name ``envoy.clusters.aggregate``

.. note::
  

  This extension is not hardened and should only be used in deployments where both the downstream and upstream are trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.clusters <extension_category_envoy.clusters>`

.. code-block:: json

  {
    "clusters": []
  }

.. _envoy_v3_api_field_extensions.clusters.aggregate.v3.ClusterConfig.clusters:

clusters
  (**repeated** `string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Load balancing clusters in aggregate cluster. Clusters are prioritized based on the order they
  appear in this list.
  
  

